# CompProgramming-2-Project-

./: .env  .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.bat
app/: app.py
app/static/: app.js  style.css
app/template/: grocery_list.html  history.html  home.html  recipes.html
app/templates/: add-all-ingredients.html  home.html  recipes.html
data/: grocery_list.json
include/: Fridge.h  HomePage.h  Ingredient.h  IngredientsPage.h  Recipe.h  RecipeManager.h  RecipesPage.h  Storage.h  UIManager.h
include/json/: json.hpp
src/: Fridge.cpp  HomePage.cpp  Ingredient.cpp  IngredientsPage.cpp  Pantry.cpp  Recipe.cpp  RecipeManager.cpp  RecipesPage.cpp  Storage.cpp  UIManager.cpp  build_database.cpp  main.cpp
